// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress render format 1`] = `
<div class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-default">
  <div class="ant-progress-inner" style="width: 120px; height: 120px; font-size: 24px;"><svg viewBox="0 0 100 100" class="ant-progress-circle">
      <path d="M 50,50 m 0,-47
       a 47,47 0 1 1 0,94
       a 47,47 0 1 1 0,-94" stroke="#f3f3f3" stroke-width="6" fill-opacity="0" class="ant-progress-circle-trail" style="stroke: red; stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px;"></path>
      <path d="M 50,50 m 0,-47
       a 47,47 0 1 1 0,94
       a 47,47 0 1 1 0,-94" stroke-linecap="round" stroke-width="6" fill-opacity="0" class="ant-progress-circle-path" style="stroke: red; stroke-dasharray: 147.6548547187203px 295.3097094374406px; stroke-dashoffset: -0px;"></path>
    </svg><span class="ant-progress-text">50%</span></div>
</div>
`;

exports[`Progress render negetive progress 1`] = `
<div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default">
  <div>
    <div class="ant-progress-outer">
      <div class="ant-progress-inner">
        <div class="ant-progress-bg" style="width: 0%; height: 8px; border-radius: 100px;"></div>
      </div>
    </div><span class="ant-progress-text">0%</span>
  </div>
</div>
`;

exports[`Progress render negetive successPercent 1`] = `
<div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default">
  <div>
    <div class="ant-progress-outer">
      <div class="ant-progress-inner">
        <div class="ant-progress-bg" style="width: 50%; height: 8px; border-radius: 100px;"></div>
        <div class="ant-progress-success-bg" style="width: 0%; height: 8px; border-radius: 100px;"></div>
      </div>
    </div><span class="ant-progress-text">50%</span>
  </div>
</div>
`;

exports[`Progress render negetive successPercent 2`] = `
<div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default">
  <div>
    <div class="ant-progress-outer">
      <div class="ant-progress-inner">
        <div class="ant-progress-bg" style="width: 50%; height: 8px; border-radius: 100px;"></div>
        <div class="ant-progress-success-bg" style="width: 10%; height: 8px; border-radius: 100px;"></div>
      </div>
    </div><span class="ant-progress-text">50 10</span>
  </div>
</div>
`;

exports[`Progress render out-of-range progress 1`] = `
<div class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-default">
  <div>
    <div class="ant-progress-outer">
      <div class="ant-progress-inner">
        <div class="ant-progress-bg" style="width: 100%; height: 8px; border-radius: 100px;"></div>
      </div>
    </div><span class="ant-progress-text"><i class="anticon anticon-check-circle"><svg viewBox="64 64 896 896" data-icon="check-circle" width="1em" height="1em" fill="currentColor" aria-hidden="true" class=""><path d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0 0 51.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"></path><path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"></path></svg></i></span>
  </div>
</div>
`;

exports[`Progress render out-of-range progress with info 1`] = `
<div class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-default">
  <div>
    <div class="ant-progress-outer">
      <div class="ant-progress-inner">
        <div class="ant-progress-bg" style="width: 100%; height: 8px; border-radius: 100px;"></div>
      </div>
    </div><span class="ant-progress-text"><i class="anticon anticon-check-circle"><svg viewBox="64 64 896 896" data-icon="check-circle" width="1em" height="1em" fill="currentColor" aria-hidden="true" class=""><path d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0 0 51.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"></path><path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"></path></svg></i></span>
  </div>
</div>
`;
